globus-gridftp-server (12.0-1+gt6.@distro@) @distro@; urgency=low

  * Fix MDTM/UTIME on windows
  * New error message format
  * Configuration database

 -- Globus Toolkit <support@globus.org>  Mon, 10 Apr 2017 11:41:34 -0400

globus-gridftp-server (11.8-1+gt6.@distro@) @distro@; urgency=low

  * better MFMT fix for windows directories.  prior fix resulted in MDTM not matching MFMT depending on DST.

 -- Globus Toolkit <support@globus.org>  Fri, 28 Oct 2016 00:52:55 -0500

globus-gridftp-server (11.7-2+gt6.@distro@) @distro@; urgency=low

  * fix error response for MDTM/UTIME on windows

 -- Globus Toolkit <support@globus.org>  Wed, 05 Oct 2016 17:12:09 -0500

globus-gridftp-server (11.6-1+gt6.@distro@) @distro@; urgency=low

  * add zlib autoconf checks and only link in file module

 -- Globus Toolkit <support@globus.org>  Tue, 04 Oct 2016 16:14:37 -0500

globus-gridftp-server (11.5-1+gt6.@distro@) @distro@; urgency=low

  * add adler32 checksum support
  * disable threads on the daemon process
  * fix windows directory MDTM support

 -- Globus Toolkit <support@globus.org>  Tue, 04 Oct 2016 07:48:41 -0500

globus-gridftp-server (11.4-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e, replace docbook with asciidoc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 13:48:13 -0400

globus-gridftp-server (11.3-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:09:41 -0400

globus-gridftp-server (11.2-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:48:57 -0400

globus-gridftp-server (11.1-1+gt6.@distro@) @distro@; urgency=low

  * fix forced ordering issues

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jul 2016 13:56:34 -0500

globus-gridftp-server (11.0-2+gt6.@distro@) @distro@; urgency=low

  * bump aging version

 -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 15:12:36 -0500
