@@ -1,3 +1,9 @@
+globus-gridftp-server (12.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * better delay for end of session ref check
+
+ -- Globus Toolkit <support@globus.org>  Tue, 18 Apr 2017 11:04:29 -0500
+
 globus-gridftp-server (12.0-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix MDTM/UTIME on windows
